# sci-soft-models

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
sci_soft_models/: __init__.py  types.py
sci_soft_models/dev_author_em/: __init__.py  constants.py  exp.py  main.py  training.py
sci_soft_models/dev_author_em/data/: __init__.py
sci_soft_models/dev_author_em/data/files/: annotated-dev-author-em-resolved.csv  joss-short-paper-details.parquet  repo-contributors.parquet  softwarex-short-paper-details.parquet
sci_soft_models/tests/: test_dev_author_em.py
